--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>ShoutrV1</title>
+    <title> <%= yield(:title) %> | ShoutrV1 </title>
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
 
