--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,2 +1,5 @@
 
-<h1>This is the home of Shoutr page</h1>
+<div class="center jumbotron">
+    <h1>Welcome to Shoutr!</h1>
+    <%= link_to 'Log in', "#", class: "btn btn-lg btn-primary" %>
+</div>
