--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,5 +1,9 @@
 
 <div class="center jumbotron">
-    <h1>Welcome to Shoutr!</h1>
-    <%= link_to 'Log in', "#", class: "btn btn-lg btn-primary" %>
+    <h1>Welcome to Shoutr! </h1>
+    <% if logged_in? %>
+    <%= link_to 'Log out', logout_path, method: :delete, class: "btn btn-lg btn-primary" %>
+    <% else %>
+    <%= link_to 'Log in', login_path, class: "btn btn-lg btn-primary" %>
+    <% end %>
 </div>
